@@ -5,3 +5,9 @@
 - name: restart supervisord
   service: name=supervisord state=restarted
 
+- name: restart rsyslog
+  service: name=rsyslog state=restarted
+
+- name: restart nginx
+  service: name=nginx state=restarted
+
