@@ -1,9 +1,10 @@
 ---
 - include: common.yml tags=7pi
+- include: collectd.yml tags=7pi
+- include: rsyslog.yml tags=7pi
 - include: postgresql.yml tags=7pi
 - include: aubergine.yml tags=7pi
 - include: sso.yml tags=7pi
 - include: rssfeeds.yml tags=7pi
 - include: crawler.yml tags=7pi
 - include: nginx.yml tags=7pi
-- include: collectd.yml tags=7pi
