@@ -26,9 +26,27 @@
   tags: 
     - 7pi
     - sso
+    - supervisor
 
 - name: sso | Restart via supervisord conf
   supervisorctl: name=sso state=restarted
   tags: 
     - 7pi
     - sso
+    - supervisor
+
+- name: sso | Copy config file for rsyslog
+  template: src=rsyslog.d/7pi-sso.conf.j2 dest=/etc/rsyslog.d/30-7pi-sso.conf
+  notify:
+    - restart rsyslog
+  tags: 
+    - 7pi
+    - sso
+    - rsyslog
+
+- name: sso | Restart via rsyslogd conf
+  service: name=rsyslog state=restarted
+  tags: 
+    - 7pi
+    - sso
+    - rsyslog
