@@ -1,0 +1,8 @@
+$ModLoad imfile
+
+$InputFileName /var/log/7pi/rssfeeds.log
+$InputFileTag spi-rssfeeds
+$InputFileStateFile spi-rssfeeds
+$InputFileSeverity info
+$InputFileFacility local7
+$InputRunFileMonitor
