@@ -1,0 +1,8 @@
+$ModLoad imfile
+
+$InputFileName /var/log/7pi/sso.log
+$InputFileTag spi-sso
+$InputFileStateFile spi-sso
+$InputFileSeverity info
+$InputFileFacility local7
+$InputRunFileMonitor
