@@ -12,6 +12,11 @@ pg_admin_password: pantagruel
 mariadb_admin_username: debian_sys_maint
 mariadb_admin_password: gargamelle
 # ----------------------------------------------------------------------
+# Elasticsearch
+# ----------------------------------------------------------------------
+es_host: 192.168.1.18
+es_port: 9200
+# ----------------------------------------------------------------------
 # 7pi SSO
 # ----------------------------------------------------------------------
 spi_sso_pg_username: 'sso'
