@@ -1,11 +1,9 @@
 ---
-- name: Elasticsearch | install python-pycurl is installed
+- name: Elasticsearch | install python-pycurl
   apt: pkg=python-pycurl state=installed
-  when: "ansible_lsb['codename'] == 'precise'"
   tags: elasticsearch
 
 - name: Elasticsearch | add apt signing key is installed
   apt_key: url=http://packages.elasticsearch.org/GPG-KEY-elasticsearch state=present
-  when: "ansible_lsb['codename'] == 'precise'"
   tags: elasticsearch
 
