@@ -1,6 +1,6 @@
 <Plugin "write_graphite">
  <Carbon>
-   Host "localhost"
+   Host "{{carbon_host}}"
    Port "{{carbon_port}}"
    #Prefix "collectd."
    #Postfix ""
