@@ -15,6 +15,7 @@ function (Settings) {
        * For Basic authentication use: http://username:password@domain.com:9200
        */
       elasticsearch: "http://{{es_address}}",
+      graphiteUrl: ""
       
       /**
        * Multiple graphite servers? Comment out graphiteUrl and replace with something like this:
