@@ -41,7 +41,7 @@ function (Settings) {
      * The default ES index to use for storing Kibana specific object
      * such as stored dashboards
      */
-    kibana_index: "kibana-int",
+    kibana_index: "kibana-int", "logstash-int", "spi-int"
 
     /** @scratch /configuration/config.js/5
      * ==== panel_name
