@@ -1,10 +1,12 @@
 <Plugin df>
-	Device "/dev/sda1"
-	Device "/dev/md0"
-	Device "/dev/sdb2"
-	Device "/dev/sdc2"
-	Device "/dev/sdd1"
-	Device "/dev/sdd2"
+        MountPoint "/"
+        MountPoint "/opt"
+        MountPoint "/media/data1"
+        MountPoint "/media/data2"
+        MountPoint "/media/data3"
+        MountPoint "/media/backup"
 	IgnoreSelected false
+        ReportInodes true
+        ReportReserved false
 </Plugin>
 
