@@ -1,5 +1,5 @@
 <Plugin hddtemp>
 	Host "127.0.0.1"
-	Port 7634
+	Port {{hddtemp_port}}
 </Plugin>
 
